# VaultDAO

./: .gitignore  CI_FIXES.md  CI_VALIDATION_REPORT.md  FINAL_CI_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PR_DETAILS.md  PWA_PR_DETAILS.md  REALTIME_PR_DETAILS.md  TODO.md  package-lock.json  package.json
.github/workflows/: test.yml
backend/src/: app.ts  index.ts  server.ts
contracts/vault/: Cargo.toml  GAS_OPTIMIZATION.md  GAS_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  clippy_errors.txt
contracts/vault/src/: bridge.rs  compile_errors.txt  errors.rs  events.rs  lib.rs  storage.rs  test.rs  test_hooks.rs  token.rs  types.rs
docs/: PWA.md  REALTIME_COLLABORATION.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/frontend/: .env.example
frontend/public/: manifest.json  service-worker.js  sw.js
frontend/public/videos/: README.md
frontend/src/: App.tsx  external-modules.d.ts  index.css  main.tsx
frontend/src/__tests__/: voiceRecognition.test.ts
frontend/src/adapters/: albedoAdapter.ts  freighterAdapter.ts  index.ts  rabetAdapter.ts  types.ts
frontend/src/components/: AccessibilitySettings.tsx  AchievementBadge.tsx  ActivityItem.tsx  AdminPanel.tsx  AdvancedChart.tsx  AdvancedSearch.tsx  AnomalyDetector.tsx  AuditExporter.tsx  AuditLog.tsx  ChartIndicators.tsx  ChartTools.tsx  CommentThread.tsx  ComplianceReports.tsx  ContextualHelp.tsx  DashboardBuilder.tsx  DeployVault.tsx  EmergencyControls.tsx  ErrorBoundary.tsx  ErrorDashboard.tsx  (+68 more)
(+88 files in other folders)
